--- a/DistanceConverter/Base.lproj/Main.storyboard
+++ b/DistanceConverter/Base.lproj/Main.storyboard
@@ -57,6 +57,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="kmTextField" destination="Vdu-6N-6Jv" id="LjH-gF-FKg"/>
+                        <outlet property="milesTextField" destination="cyt-aM-KUN" id="kyt-Ta-31X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
